fix(footer.module.scss): fix alignment of icons in footer style(footer.module.scss): add icon class to footer icons to apply the same style

--- a/client/src/components/scss/footer.module.scss
+++ b/client/src/components/scss/footer.module.scss
@@ -1,12 +1,13 @@
 .footer {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
+  align-items: center;
   .container {
     display: flex;
     flex-direction: row;
     gap: var(--spacing-xs);
-    a {
+    .icon {
+      line-height: 1;
       @media (hover) {
         &:hover {
           color: var(--color-complementary-2);
@@ -17,11 +18,6 @@
       background: none;
       border: none;
       color: var(--color-accent-1);
-      @media (hover) {
-        &:hover {
-          color: var(--color-complementary-2);
-        }
-      }
     }
   }
 }
